# reqtool

./: .gitignore  .rust-analyzer.toml  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
benches/: analysis.rs  parsing.rs
src/grammars/: entity.pest  expression.pest
src/lib/: children.rs  diagnostic.rs  iter.rs  mock.rs  mod.rs  visitor.rs
src/lib/mapper/: ancestors.rs  id.rs  mod.rs  path.rs  tags.rs  traceability.rs  usage.rs
src/lib/renderer/: debug.rs  linter.rs  mod.rs
src/lib/syntax/: error.rs  mod.rs
src/lib/syntax/entity/: mod.rs  parser.rs  tokenizer.rs
src/lib/syntax/expression/: mod.rs  parser.rs
src/lib/syntax/markup/: mod.rs  tokenizer.rs
src/lib/verifier/: definition.rs  mod.rs  reference.rs  typing.rs
tests/: linter.rs  valid.rs
tests/data/valid/: aggregator.req  arithmetics.req  branch.req  exists.req  forall.req  formal.req  logical.req  select.req  set.req  simple.req  temporal.req  traceability.req  when.req
